2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: implement regex caching with two mutex-protected
	  GHashTables (one for REG_NEWLINE, one for !REG_NEWLINE)

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: rename do_validate_regex() to do_regex_compile()

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match_word(): earlier init of static data

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: static corner case regex definitions for
	  match_word()

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match_word(): push down nglob variable, rename it
	  to glob_copy

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: move word wrapping out of match_word() into new
	  helper wrap_word()

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: ambloc_to_regex(): calculate worst case expansion
	  dynamically

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: ambloc_to_regex(): pass beginning and end of regex
	  as arguments

2011-06-13  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: group functions logically together, add comments

2011-06-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Worker.pm: s/messsage/message/.

2011-06-09  Dustin J. Mitchell <dustin@mozilla.com>
	* client-src/selfcheck.c: Push down tmpbuf and remove some duplicate
	  code; fixes compiles with SAMBA_VERSION not defined

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* gnulib/*: revert blind perl one-liner replacement of alloc to
	  g_malloc, by doing the reverse transform exactly

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* oldrecover-src/amrecover.c: fix one more wrong g_str_has_prefix()
	  usage

2011-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* oldrecover-src/extract_list.c,
	  recover-src/extract_list.c: Fix g_str_has_prefix.